# ai-etl-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
config/: providers.yaml  settings.yaml
data/: bootstrap_demo_data.py  customer_reviews.csv  fetch_open_datasets.py  generate_invoices.py  products_catalog.json  sales_transactions.csv
data/real/: README.md
pipelines/: demo_customer_reviews.py  demo_invoice_processing.py  demo_multiformat_ingestion.py  demo_open_data_etl.py  demo_sales_analytics.py  run_all.py
src/: __init__.py
src/engine/: __init__.py  context.py  decorators.py  events.py  models.py  pipeline.py  registry.py  step.py
src/extractors/: __init__.py  api_extractor.py  csv_extractor.py  image_extractor.py  pdf_extractor.py  web_scraper.py
src/intelligence/: __init__.py  anomaly_detector.py  document_processor.py  pipeline_advisor.py  profiler.py  quality_scorer.py
src/llm/: __init__.py  cache.py  cost_tracker.py  gateway.py  schemas.py
src/loaders/: __init__.py  duckdb_loader.py  file_loader.py  sqlite_loader.py
src/transformers/: __init__.py  cleaner.py  enricher.py  pii_redactor.py  semantic_mapper.py  validator.py
src/utils/: display.py  logging.py
tests/: conftest.py
tests/test_engine/: test_decorators.py  test_events.py  test_pipeline.py
tests/test_extractors/: test_csv_extractor.py
tests/test_intelligence/: test_anomaly_detector.py  test_profiler.py
tests/test_llm/: test_adapters.py  test_cost_tracker.py  test_gateway.py
tests/test_transformers/: test_cleaner.py  test_enricher.py  test_validator.py
(+6 files in other folders)
